Fri Aug 22 15:57:21 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * examples/AMH/Sink_Server/MT_AMH_Server.h:
        * examples/Event_Comm/Consumer_Input_Handler.h:
        * orbsvcs/tests/Security/MT_BiDir_SSL/Client_Task.h:
        * tests/MT_BiDir/Client_Task.h:
        * tests/Stack_Recursion/Server_Task.h:
        * tests/Two_Objects/Second_i.h:
          Correct the include guard macro.

        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Profile.cpp:
        * tao/AnyTypeCode/Any_Impl.cpp:
        * tao/Strategies/DIOP_Profile.cpp:
        * tao/Strategies/SHMIOP_Profile.cpp:
        * tao/Strategies/UIOP_Profile.cpp:
          Make order of evaluation explicit.

        * tao/LF_Multi_Event.cpp:
          Fix logic error in final state detection. This code may be unused
          as a clear error has never resulted in a runtime issue.

Fri Aug 22 06:41:21 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IORTable_Locator/client.cpp:
          Fixed memory leak

        * tests/OBV/Any/AnyS_impl.cpp:
          Removed commented out code

        * tests/Portable_Interceptors/Bug_3079/Server_ORBInitializer.h:
          Layout change

Thu Aug 21 20:26:50 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.cpp:
          Fix coverity reported errors and some whitespace cleanup.

Sun Aug 17 18:52:48 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/ESF/ESF_Delayed_Command.cpp:
          Removed if statements, the regular and else clause had the
          exact same code, reported by Coverity

        * tests/Smart_Proxies/Benchmark/client.cpp:
        * tests/Smart_Proxies/Benchmark/server.cpp:
        * tests/Smart_Proxies/Collocation/Smart_Proxy_Impl.h:
        * tests/Smart_Proxies/Collocation/Smart_Proxy_Impl.cpp:
        * tests/Smart_Proxies/On_Demand/client.cpp: